# longrange

./: .gitignore  IMPROVEMENTS.md  README.md  _headers  build.sh  build_wasm.sh  elm.json  index.html  package-lock.json  package.json  wrangler.toml
archive/: Cargo.toml  LICENSE  _headers  ballistics_solver.py  build.sh  index.html
archive/src/: lib.rs
src/: Ballistics.elm  Components.elm  MPBR.elm  Main.elm  Serialize.elm  Styles.elm  TopGun.elm  Types.elm  lib.rs  main.rs
src/Ballistics/: Trajectory.elm
