[package]
name = "longrange"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
egui_flex = "0.5.0"
egui_plot = "0.34.0"
emath = "0.33.0"
env_logger = "0.11.8"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
